--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,28 @@
 {
+    parser: '@typescript-eslint/parser',
     extends: [
+        'plugin:react/recommended',
+        'plugin:@typescript-eslint/eslint-recommended',
+        'plugin:@typescript-eslint/recommended',
         'plugin:chowa-standard/recommended'
-    ]
+    ],
+    plugins: [
+        'react',
+        '@typescript-eslint'
+    ],
+    env: {
+        node: false,
+        browser: true,
+        es6: true
+    },
+    parserOptions: {
+        ecmaVersion: 2017,
+        sourceType: 'module'
+    },
+    settings: {
+        react: {
+            pragma: 'React',
+            version: 'detect'
+        }
+    }
 }
