--- a/package.json
+++ b/package.json
@@ -72,12 +72,15 @@
     "@types/prop-types": "^15.7.3",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
+    "@typescript-eslint/eslint-plugin": "^2.16.0",
+    "@typescript-eslint/parser": "^2.16.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
     "cwfont": "latest",
-    "eslint-plugin-chowa-standard": "^1.0.6",
+    "eslint-plugin-chowa-standard": "latest",
+    "eslint-plugin-react": "^7.18.0",
     "file-loader": "^4.2.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "gulp": "^4.0.2",
