--- a/package.json
+++ b/package.json
@@ -56,7 +56,9 @@
     "react-dnd": "^9.4.0",
     "react-dnd-html5-backend": "^9.4.0",
     "react-dom": "^16.10.2",
-    "resize-observer-polyfill": "^1.5.1"
+    "resize-observer-polyfill": "^1.5.1",
+    "stylelint": "^13.2.0",
+    "stylelint-webpack-plugin": "^1.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.3",
@@ -79,6 +81,9 @@
     "css-loader": "^3.2.0",
     "cssnano": "^4.1.10",
     "cwfont": "latest",
+    "eslint": "^6.8.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-chowa-standard": "latest",
     "eslint-plugin-react": "^7.18.0",
     "file-loader": "^4.2.0",
@@ -99,6 +104,7 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.2",
     "stylelint-plugin-chowa-standard": "latest",
+    "stylelint-scss": "^3.14.2",
     "ts-loader": "^6.2.1",
     "typescript": "^3.6.3",
     "uglifyjs-webpack-plugin": "^2.2.0",
