--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chowa",
-  "version": "1.0.7",
+  "version": "1.0.8",
   "description": "UI component library based on React",
   "main": "dist/chowa.js",
   "typings": "es/index.d.ts",
@@ -50,68 +50,68 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "moment": "^2.24.0",
-    "prismjs": "^1.17.1",
+    "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
-    "react": "^16.10.2",
-    "react-dnd": "^9.4.0",
-    "react-dnd-html5-backend": "^9.4.0",
-    "react-dom": "^16.10.2",
+    "react": "^16.13.1",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
+    "react-dom": "^16.13.1",
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.3",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-export-default-from": "^7.5.2",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
-    "@babel/runtime": "^7.6.3",
-    "@types/classnames": "^2.2.9",
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "@babel/runtime": "^7.9.2",
+    "@types/classnames": "^2.2.10",
     "@types/prismjs": "^1.16.0",
     "@types/prop-types": "^15.7.3",
-    "@types/react": "^16.9.5",
-    "@types/react-dom": "^16.9.1",
-    "@typescript-eslint/eslint-plugin": "^2.16.0",
-    "@typescript-eslint/parser": "^2.16.0",
-    "babel-loader": "^8.0.6",
-    "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.2.0",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@typescript-eslint/eslint-plugin": "^2.28.0",
+    "@typescript-eslint/parser": "^2.28.0",
+    "babel-loader": "^8.1.0",
+    "copy-webpack-plugin": "^5.1.1",
+    "css-loader": "^3.5.2",
     "cssnano": "^4.1.10",
-    "cwfont": "latest",
+    "cwfont": "^1.1.4",
     "eslint": "^6.8.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-chowa-standard": "latest",
-    "eslint-plugin-react": "^7.18.0",
-    "file-loader": "^4.2.0",
+    "eslint-loader": "^4.0.0",
+    "eslint-plugin-chowa-standard": "^1.1.0",
+    "eslint-plugin-react": "^7.19.0",
+    "file-loader": "^6.0.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "gulp": "^4.0.2",
     "gulp-banner": "^0.1.3",
     "gulp-clean": "^0.4.0",
-    "gulp-rename": "^1.4.0",
+    "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
-    "gulp-typescript": "^5.0.1",
-    "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
+    "html-webpack-plugin": "^4.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss": "^7.0.18",
+    "postcss": "^7.0.27",
     "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.2",
-    "stylelint": "^13.2.1",
-    "stylelint-plugin-chowa-standard": "latest",
-    "stylelint-scss": "^3.14.2",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.4",
+    "stylelint": "^13.3.2",
+    "stylelint-plugin-chowa-standard": "^1.1.0",
+    "stylelint-scss": "^3.17.0",
     "stylelint-webpack-plugin": "^1.2.3",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.6.3",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.41.0",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2",
+    "terser-webpack-plugin": "^2.3.5",
+    "ts-loader": "^7.0.0",
+    "typescript": "^3.8.3",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
     "webpack-merge": "^4.2.2"
   }
 }
